--- a/index.html
+++ b/index.html
@@ -43,11 +43,8 @@
         <div class="col-lg-6 col-sm-12 landing-text">
             
             <h2 id="Heading-Landing">Junior Back-End Developer</h2>
-            <p id="Paragraph-Landing">During this year, I have finished a full back-end .NET academy,
-	                and developed a graduation project and succesfully got a diploma.
-	                Now I am working on developing additional projects going on a practice
-	                in the same company where I attended the full academy and I am gaining
-	                some experience.</p>
+            <p id="Paragraph-Landing">I am Pance Prendzov, a junior back-end developer who focuses on developing everything my 
+                client will ask for, gaining significant experience.</p>
 
                 <h5><a href="#Recent-Works" class="Links-Landing">View Projects</a>&nbsp;&nbsp;&nbsp;<span id="Paragraph-Landing" style="font-size: 16px !important;">or</span>&nbsp;&nbsp;&nbsp;<a href="#About-Me" class="Links-Landing">Read About Me</a></h5>
         </div>
@@ -91,18 +88,15 @@
         <p class="Heading-About-Me">A FEW WORDS ABOUT ME</p>
 
         <p class="Biography">
-           I'm Pance Prendjov, a junior back-end developer who focuses on creating
-	        everything my client will ask for, through gaining an enjoyable and meaningful
-	        experience..
+          I am Pance Prendzov, a junior back-end developer who focuses on developing everything my 
+          client will ask for, gaining significant experience.
         </p>
         <br>
         <br>
         <p class="Work-Experience">
-           During this year, I have finished a full back-end .NET academy,
-            and developed a graduation project and succesfully got a diploma.
-            Now I am working on developing additional projects going on a practice
-            in the same company where I attended the full academy and I am gaining
-            some experience.
+           During this year I completed a full back-end .NET academy, developed a degree project
+           and successfully graduated. I am currently working on developing other projects going 
+           to an internship in the same company where I listened to the course and gaining additional experience.
         </p>
 
         <img src="image-about-me.jpg" alt="" class="Image-About-Me">
