--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="file:///C:/Web%20Development/Freelance/Upwork/Digital-Agency(ULTRASOFT)/Images/Group%20115.png" alt="" class="navbar-logo"></a>
+          <a class="navbar-brand" href="#"><img src="Images/Group%20115.png" alt="" class="navbar-logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,7 +62,7 @@
               <p class="subeading-landing-page"><span class="special-item-subheading-landing-page">Why </span>do my business requiers an online platform?</p>
           </div>
           <div class="col-lg-6 col-sm-12">
-              <img src="file:///C:/Web%20Development/Freelance/Upwork/Digital-Agency(ULTRASOFT)/Images/urn_aaid_sc_US_142398be-60e1-4fe3-b17e-75d32ddb1379.png" alt="" class="image-landing-page">
+              <img src="Images/urn_aaid_sc_US_142398be-60e1-4fe3-b17e-75d32ddb1379.png" alt="" class="image-landing-page">
           </div>
       </div>
        <button class="light-mode-button" aria-label="Toggle Light Mode" onclick="toggle_light_mode()">
