--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>UltraSoft | Digital Agency</title>
 </head>
@@ -20,7 +23,7 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="Images/Group%20115.png" alt="" class="navbar-logo"></a>
+          <a class="navbar-brand" href="#"><img src="Group%20115.png" alt="" class="navbar-logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,7 +65,7 @@
               <p class="subeading-landing-page"><span class="special-item-subheading-landing-page">Why </span>do my business requiers an online platform?</p>
           </div>
           <div class="col-lg-6 col-sm-12">
-              <img src="Images/urn_aaid_sc_US_142398be-60e1-4fe3-b17e-75d32ddb1379.png" alt="" class="image-landing-page">
+              <img src="urn_aaid_sc_US_142398be-60e1-4fe3-b17e-75d32ddb1379.png" alt="" class="image-landing-page">
           </div>
       </div>
        <button class="light-mode-button" aria-label="Toggle Light Mode" onclick="toggle_light_mode()">
