--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
           <div class="col-lg-6 col-sm-12">
               <img src="urn_aaid_sc_US_142398be-60e1-4fe3-b17e-75d32ddb1379.png" alt="" class="image-landing-page">
           </div>
-      </div>
-       <button class="light-mode-button" aria-label="Toggle Light Mode" onclick="toggle_light_mode()">
+        </div>
+        <img src="Group%20118.svg" alt="" aria-label="Toggle Light Mode" onclick="toggle_light_mode()" class="dark"> <span class="mode-text">DARK MODE</span>
         <span></span>
         <span></span>
-    </button>
   </div>
 <!----------------------------------------- LANDING-PAGE ----------------------------------------->
     
